--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="text">hello world</p>
+    <p class="text"></p>
     <script src="index.js"></script>
 </body>
 </html>
