--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <p id="text"></p>
       </div>
       <div class="result">
-        <p id="result"></p>
+        <p id="result">
+          
+        </p>
       </div>
     </div>
     <script src="index.js"></script>
